[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
enum-iterator = "1.4.1"
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.2"
serde = "1.0.193"
thiserror = "1.0.50"
